--- a/config/siglas/datosBasicos.yml
+++ b/config/siglas/datosBasicos.yml
@@ -3,4 +3,5 @@ organismo:
   siglas: MPPP
 conectividad:
   dominio: 'http://sdc.gob.ve'
-  rangos_ip: '172.17'
+  rangos_ip: '127.0'
+  #rangos_ip: '172.17'
